--- a/src/components/header/home/home.css
+++ b/src/components/header/home/home.css
@@ -75,7 +75,8 @@
 }
 
 .home__img {
-    background: url('../../../assets/rijvan.jpg');
+    /* background: url('../../../assets/rijvan.jpg'); */
+    background: url('../../../assets/profile-pic.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -84,11 +85,12 @@
     justify-content: center;
     width: 300px;
     height: 300px;
-    animation: profile__animate 8s ease-in-out infinite 1s;
+    /* animation: profile__animate 5s ease-in-out infinite 1s; */
+    animation: profile__animate 8s ease-in-out 1s infinite;
 }
 
 @keyframes profile__animate {
-    0%{
+    /* 0%{
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
     50%{
@@ -96,7 +98,17 @@
     }
     100%{
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    } */
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
+    50% {
+        border-radius: 33% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    
 }
 
 .home__scroll{
@@ -114,6 +126,7 @@
     30%{
         transform: translateY(3.75rem);
     }
+    
     
 }
 
